--- a/battleground-builder/package.json
+++ b/battleground-builder/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-resizable-panels": "^2.0.19"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
