--- a/battleground-builder/package.json
+++ b/battleground-builder/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/intersects": "^2.7.5",
+    "intersects": "^2.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
